--- a/index.html
+++ b/index.html
@@ -6,20 +6,20 @@
 	 
 	<script src="js/jquery-3.2.1.min.js"></script>
   <meta charset="utf-8">
-	<title>²ÌÐìÀ¤À´µç</title>
+	<title>å‘¨äºŽæ–æ¥ç”µ</title>
 	  </head>
   <body>
 	<div class="logo">
 	<center>
 	  <img src="cxk.png">
 	  <b> 
-		<p>ÑûÇëÄãÊÓÆµÍ¨»°</p>  
+		<p>é‚€è¯·ä½ è§†é¢‘é€šè¯</p>  
 		</b>
 	  </center>
     </div>
 	<div class="tb">
 	  <input name="flase" id="flase" type="image" src="3.png" onclick="
-		var ansswer = confirm(' ÊÇ·ñÒªÈ¥´ò²ËÐéöï»¹ÊÇÓëËûÊÓÆµ¡£' );
+		var ansswer = confirm(' æ˜¯å¦è¦åŽ»æ‰“èœè™šé²²è¿˜æ˜¯ä¸Žä»–è§†é¢‘ã€‚' );
     
 if(ansswer){
              
