--- a/index.html
+++ b/index.html
@@ -18,12 +18,12 @@
     </div>
 	<div class="tb">
 	  <input name="flase" id="flase" type="image" src="3.png" onclick="
-		var ansswer = confirm(' 是否要去打菜虚鲲还是与他视频。' );
+		var ansswer = confirm(' 是否要去打周于斐还是与他视频。' );
     
 if(ansswer){
              
 
-window.location = '/a.html';
+window.location = 'https://ljc6966.github.io/dadishu/';
 }
 ">
 
