--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@ window.location = 'https://ljc6966.github.io/dadishu/';
 }
 ">
 
-		<a href="b.html">
+		<a href="https://ljc6966.github.io/sp/">
 		  <input name="true" id="true" type="image" src="4.png">
 		</a>
 		</div>
