--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     </div>
 	<div class="tb">
 	  <input name="flase" id="flase" type="image" src="3.png" onclick="
-		var ansswer = confirm(' 是否要去打周于斐还是与他视频。' );
+		var ansswer = confirm('要去打周于斐还是与他视频' );
     
 if(ansswer){
              
