--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	 
 	<script src="js/jquery-3.2.1.min.js"></script>
   <meta charset="utf-8">
-	<title>周于斐来电</title>
+	<title>王耀宇来电</title>
 	  </head>
   <body>
 	<div class="logo">
@@ -18,16 +18,16 @@
     </div>
 	<div class="tb">
 	  <input name="flase" id="flase" type="image" src="3.png" onclick="
-		var ansswer = confirm('要去打周于斐还是与他视频' );
+		var ansswer = confirm('要去打王耀宇还是与他视频' );
     
 if(ansswer){
              
 
-window.location = 'https://ljc6966.github.io/dadishu/';
+window.location = 'https://ljc966.github.io/dadishu/';
 }
 ">
 
-		<a href="https://ljc6966.github.io/sp/">
+		<a href="https://ljc966.github.io/sp/">
 		  <input name="true" id="true" type="image" src="4.png">
 		</a>
 		</div>
