--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	 
 	<script src="js/jquery-3.2.1.min.js"></script>
   <meta charset="utf-8">
-	<title>王耀宇来电</title>
+	<title>蔡徐坤来电</title>
 	  </head>
   <body>
 	<div class="logo">
@@ -18,7 +18,7 @@
     </div>
 	<div class="tb">
 	  <input name="flase" id="flase" type="image" src="3.png" onclick="
-		var ansswer = confirm('要去打王耀宇还是与他视频' );
+		var ansswer = confirm('要去打蔡徐坤还是与他视频' );
     
 if(ansswer){
              
@@ -37,3 +37,4 @@ window.location = 'https://ljc966.github.io/dadishu/';
  </body>
 
 </html>		
+
